--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav class="navbar">
         <div class="container">
           <a href="index.html" class="brand">
-            <img src="/assets/images/Asset 2@2x-8.png" />
+            <img src="assets/images/Asset 2@2x-8.png" />
           </a>
           <a href="index.html" class="brand-mobile">Wominjeka</a>
           <div class="menu">
@@ -330,7 +330,7 @@
             </p>
           </div>
           <div>
-            <img src="/assets/images/Touka.jpg" alt="person" />
+            <img src="assets/images/Touka.jpg" alt="person" />
             <h2>Touka</h2>
             <h3>Head of Middle East</h3>
             <p>
@@ -340,7 +340,7 @@
             </p>
           </div>
           <div>
-            <img src="/assets/images/Rotz.jpg" alt="" />
+            <img src="assets/images/Rotz.jpg" alt="" />
             <h2>Rodrigo Trevino</h2>
             <h3>Founder</h3>
             <p>
@@ -356,20 +356,12 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="scroll-checkpoint">
       <img
-        src="/assets/images/IMG-20230803-WA0014.jpg"
+        src="assets/images/IMG-20230803-WA0014.jpg"
         class="img1"
         alt="gallery"
       />
-      <img
-        src="/assets/images/20230608_162110.jpg"
-        class="img2"
-        alt="gallery"
-      />
-      <img
-        src="/assets/images/20230706_163722.jpg"
-        class="img3"
-        alt="gallery"
-      />
+      <img src="assets/images/20230608_162110.jpg" class="img2" alt="gallery" />
+      <img src="assets/images/20230706_163722.jpg" class="img3" alt="gallery" />
       <div class="title">
         <h1>
           Our <br />
@@ -377,23 +369,11 @@
           Gallery <br />
         </h1>
       </div>
-      <img
-        src="/assets/images/20221124_162436.jpg"
-        class="img4"
-        alt="gallery"
-      />
-      <img
-        src="/assets/images/20230706_154042.jpg"
-        class="img5"
-        alt="gallery"
-      />
-      <img
-        src="/assets/images/20231211_151346.jpg"
-        class="img6"
-        alt="gallery"
-      />
+      <img src="assets/images/20221124_162436.jpg" class="img4" alt="gallery" />
+      <img src="assets/images/20230706_154042.jpg" class="img5" alt="gallery" />
+      <img src="assets/images/20231211_151346.jpg" class="img6" alt="gallery" />
       <div class="modal">
-        <img src="/assets/images/20230727_163847.jpg" alt="modal-img" />
+        <img src="assets/images/20230727_163847.jpg" alt="modal-img" />
       </div>
     </section>
     <!-- Pricing Section-->
@@ -503,7 +483,7 @@
             </div>
           </div>
         </div>
-        <img src="/assets/images/20221124_162557.jpg" alt="contact" />
+        <img src="assets/images/20221124_162557.jpg" alt="contact" />
       </div>
     </section>
     <!-- Footer -->
