--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Icon -->
     <!--Favicon-->
-    <link rel="icon" type="image/x-icon" href="/assets/images/Asset-7.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/images/Asset-7.ico" />
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
 
     <!-- Google Font & Icons -->
